init MoviePlusSystem