@@ -2,12 +2,12 @@ package com.movieplus.domain.service.impl;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.movieplus.domain.common.ObjectMapperCommonUtil;
 import com.movieplus.domain.db.read.RMovieTrailerMapper;
 import com.movieplus.domain.entity.MovieTrailer;
 import com.movieplus.domain.payload.request.GetInternalApiRequest;
@@ -15,7 +15,9 @@ import com.movieplus.domain.repository.MovieTrailerRepository;
 import com.movieplus.domain.service.MovieTrailerService;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class MovieTrailerServiceImpl implements MovieTrailerService{
@@ -27,23 +29,26 @@ public class MovieTrailerServiceImpl implements MovieTrailerService{
 	@Override
 	public List<String> save(List<MovieTrailer> records) throws Exception {
 		try {
+			log.info("Do save with request: {}", ObjectMapperCommonUtil.writeValueAsString(records));
 			List<MovieTrailer> movieTrailers = repository.saveAll(records);
 			return movieTrailers.stream()
 					.map(MovieTrailer::getId)
-					.collect(Collectors.toList());
+					.toList();
 		} catch (Exception e) {
-			throw new Exception();
+			log.error("ERROR save: {}", e);
+			throw new Exception("Insert records fail");
 		}
 	}
 
 	@Override
-	public List<MovieTrailer> getMovieTrailer(GetInternalApiRequest request) throws Exception {
+	public List<MovieTrailer> getMovieTrailer(GetInternalApiRequest request) {
 		try {
+			log.info("Do getMovieTrailer with request: {}", ObjectMapperCommonUtil.writeValueAsString(request));
 			List<Map<String, Object>> results = mapper.selectWhere(request.getConditionStr(), request.getLimit(), request.getOffset(), request.getOrderBys());
-			List<MovieTrailer> movieTrailers = objectMapper.convertValue(results, new TypeReference<List<MovieTrailer>>() {});
-			return movieTrailers;
+			return objectMapper.convertValue(results, new TypeReference<List<MovieTrailer>>() {});
 		} catch (Exception e) {
-			throw new Exception();
+			log.error("ERROR getMovieTrailer: {}", e);
+			return List.of();
 		}
 	}
 	
